[package]
name = "pel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
font-kit = "0.11.0"
genawaiter = "0.99.1"
num-bigint = "0.4.4"
sfml = { version = "0.20.0", features = ["graphics"] }
