[package]
name = "pel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
genawaiter = "0.99.1"
line-span = "0.1.5"
num-bigint = "0.4.4"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
web-sys = {version = "0.3.65", features = ["console", "Window", "Document", "Element", "Text", "Node", "NodeList", "KeyboardEvent"]}
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]
